# django-plugins

./: .coveragerc  .editorconfig  .gitignore  .python-version  pyproject.toml  tox.ini
django_plugins/: __init__.py  admin.py  apps.py  fields.py  models.py  point.py  tests.py  utils.py
django_plugins/conf/: settings.py
django_plugins/management/: __init__.py
django_plugins/management/commands/: syncplugins.py
django_plugins/migrations/: 0001_initial.py
django_plugins/templatetags/: plugins.py
docs/: Makefile  conf.py
example-project/: Makefile  manage.py  py
example-project/mycms/: settings.py  urls.py  wsgi.py
example-project/mycmsplugin/: plugins.py
example-project/mycmsproject/: admin.py  apps.py  models.py  plugins.py  settings.py  signals.py  urls.py  views.py  wsgi.py
example-project/mycmsproject/migrations/: 0001_initial.py
example-project/myothercmsplugin/: plugins.py
